/**
 *
 * Please note:
 * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * Do not edit this file manually.
 *
 */

@file:Suppress(
  "ArrayInDataClass",
  "DuplicatedCode",
  "EnumEntryName",
  "RemoveRedundantQualifierName",
  "RemoveRedundantCallsOfConversionMethods",
  "REDUNDANT_CALL_OF_CONVERSION_METHOD",
  "RedundantUnitReturnType",
  "RemoveEmptyClassBody",
  "UnnecessaryVariable",
  "UnusedImport",
  "UnnecessaryVariable",
  "unused",
  "ProtectedInFinal",
  "AddExplicitTargetToParameterAnnotation",
)
package remote.apis

import remote.infrastructure.CollectionFormats.*
import retrofit2.http.*
import retrofit2.Response
import okhttp3.RequestBody
import com.squareup.moshi.Json

import remote.models.Login200Response
import remote.models.LoginRequest

interface AuthApi {
    /**
     * POST auth/login
     * Login
     * 
     * Responses:
     *  - 200: OK
     *  - 400: Bad Request
     *  - 401: Unauthorized
     *  - 500: Internal Server Error
     *
     * @param loginRequest 
     * @return [Login200Response]
     */
    @POST("auth/login")
    suspend fun login(@Body loginRequest: LoginRequest): Response<Login200Response>

}
