package com.dmm.bootcamp.yatter.ui.login

data class LoginBindingModel(
  val username: String,
  val password: String,
)
